# spec_fiddler

./: README.md  pyproject.toml
.github/workflows/: python-app.yml  python-publish.yml
docs/: Makefile  conf.py  index.rst  make.bat  modules.rst
src/spec_fiddler/: __init__.py  _version.py  app.py  core.py
src/spec_fiddler/common/plots/: surface_plot.py
tests/: __init__.py  test_spec_fiddler.py
