
[project.urls]
homepage = "https://github.com/Jerry-Ma/spec_fiddler"
documentation = "https://spec_fiddler.readthedocs.io/"
repository = "https://github.com/Jerry-Ma/spec_fiddler"
changelog = "https://github.com/Jerry-Ma/spec_fiddler/blob/main/CHANGELOG.md"

[project]
name="spec_fiddler"
description = "An interactive tool to fiddle with spectra."
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
license = {file = "LICENSE"}
keywords = ["spec_fiddler"]
authors = [
  {name="Zhiyuan Ma", email="zhiyuanma@umass.edu"},
]
classifiers = [
  'Development Status :: 2 - Pre-Alpha',
  'Intended Audience :: Developers',
  'Natural Language :: English',
  'License :: OSI Approved :: BSD License',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
]

dependencies = [
  "click",
  "dash_component_template",
  "tollan @ git+https://github.com/toltec-astro/tollan.git@v2.x"
]

[project.scripts]
spec_fiddler = "spec_fiddler.cli:main"

[tool.setuptools.package-data]
"*" = [
    "data/*",
    "data/*/*",
    "data/*/*/*",
    "data/*/*/*/*",
    "data/*/*/*/*/*",
    "data/*/*/*/*/*/*"
]

[build-system]
requires = ["setuptools",
            "setuptools_scm[toml]>=6.2",
            "wheel"]
build-backend = 'setuptools.build_meta'


[tool.setuptools_scm]
write_to = "src/spec_fiddler/_version.py"

[project.optional-dependencies]
dev = [
    "pytest",
    "isort",
    "black",
    "ruff",
    "pre-commit",
    "sphinx",
    "myst_parser",
    "sphinx-book-theme",
    "sphinx-automodapi",
]

[tool.pytest.ini_options]
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--doctest-modules"

[tool.black]
line-length = 88
force-exclude = '''
^/(
  (
    examples
    |
    docs
    |
    data
    |
    src/spec_fiddler/_version.py
  )
)
'''

[tool.isort]
profile = "black"
extend_skip_glob = [
    "docs/*",
    "src/spec_fiddler/_version.py"
]
group_by_package = true

[tool.ruff]
target-version = "py38"
line-length = 88
select = ["ALL"]
exclude=[
    "docs/*",
    "src/spec_fiddler/_version.py"
]

[tool.ruff.pydocstyle]
convention = "numpy"
